--- a/flask-assure-plus/templates/user_account.html
+++ b/flask-assure-plus/templates/user_account.html
@@ -2,7 +2,7 @@
 
 {% block main %}
     <main class="d-flex flex-column main-sizing-index row-cols-1 align-items-center">
-        <form action="" method="post" class="col-12 col-sm-8 col-md-6 col-lg-5 position-relative d-flex flex-column justify-content-between pt-2 ps-4 pe-4 pb-4">
+        <form action="{{url_for('user_account.user_account_post')}}" method="post" class="form-account col-12 col-sm-8 col-md-6 col-lg-5 position-relative d-flex flex-column justify-content-between pt-2 ps-4 pe-4 pb-4">
             <legend class="mb-5">{{current_user.full_name}} - Mon compte</legend>
             <div class="mb-2 mt-1">
                 <input name="AssureNumber" type="text" class="rounded-1 form-control h-75" id="AssureNumber" placeholder="Numéro d'assuré" value="{{current_user.assure_number}}">
